fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ body {
         padding: 0;
 }
 
-body {
+.overflow-hidden-wrapper {
         overflow-x: hidden;
 }
 
